bugfix: Use inline-flex to vertically align button icon and copy

--- a/src/static/sass/components/_modal.scss
+++ b/src/static/sass/components/_modal.scss
@@ -101,6 +101,7 @@
   }
 
   &__btn {
+    display: inline-flex;
     text-transform: uppercase;
     font-weight: 500;
     cursor: pointer;
